tests/baselines/reference/classAndInterfaceWithSameName.errors.txt
tests/cases/conformance/classes/classDeclarations/classAndInterfaceWithSameName.ts(1,11): error TS2300: Duplicate identifier 'foo'.
tests/cases/conformance/classes/classDeclarations/classAndInterfaceWithSameName.ts(2,15): error TS2300: Duplicate identifier 'foo'.
tests/cases/conformance/classes/classDeclarations/classAndInterfaceWithSameName.ts(6,9): error TS2300: Duplicate identifier 'bar'.
tests/cases/conformance/classes/classDeclarations/classAndInterfaceWithSameName.ts(10,9): error TS2300: Duplicate identifier 'bar'.


==== tests/cases/conformance/classes/classDeclarations/classAndInterfaceWithSameName.ts (4 errors) ====
    class C { foo: string; }
              ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    interface C { foo: string; }
                  ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    
    module M {
        class D {
            bar: string;
            ~~~
!!! error TS2300: Duplicate identifier 'bar'.
        }
    
        interface D {
            bar: string;
            ~~~
!!! error TS2300: Duplicate identifier 'bar'.
        }
    }